--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -142,6 +142,13 @@
       cursor: move;
       border: 2px solid transparent;
     }
+    .turn-entry.dragging {
+      opacity: 0.7;
+      border: 2px solid #FFC107;
+    }
+    .turn-entry.drag-over {
+      border: 2px dashed #FFC107;
+    }
     .turn-entry p {
       margin: 5px 0;
     }
@@ -379,9 +386,6 @@ body.menu-open {
         font-size: 16px;
     }
 }
-
-
-
   </style>
 
 
@@ -427,7 +431,7 @@ body.menu-open {
   <div class="footer">
     <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
         <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-        <span>Home</span>
+        <span>Home1</span>
     </a>
     <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
         <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
@@ -439,7 +443,7 @@ body.menu-open {
     </a>
 </div>
 
-<script src="/BeeMazing-Y1/shared/taskrotations.js"></script>
+
 
   <script>
 
@@ -670,7 +674,7 @@ async function handleReplace(title, date, index, originalUser, event) {
     turnEntry.querySelector("p").textContent = `Turn ${parseInt(index) + 1}: ${newUser} - Pending`;
     turnEntry.querySelector("select").value = "";
     turnEntry.dataset.user = newUser;
-    setTimeout(() => loadTasks(), 500);
+    setTimeout(() => loadTasks(true), 1000); // Increased delay, force retry
   } catch (err) {
     console.error("Error replacing user:", err);
     const errorDiv = document.createElement("div");
@@ -749,115 +753,165 @@ async function handleReorder(title, date, newUserOrder) {
 
 
 
-
-
-async function loadTasks() {
+async function loadTasks(retry = false, attempt = 1, maxAttempts = 3) {
   try {
+    console.log(`Loading tasks for date: ${selectedDate}, attempt: ${attempt}`); // Debug
     const res = await fetch(`https://beemazing.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
       cache: "no-store"
     });
     if (!res.ok) throw new Error(`HTTP error ${res.status}`);
     const { tasks } = await res.json();
+    console.log("All tasks received:", tasks.map(t => ({
+      title: t.title,
+      users: t.users,
+      date: t.date,
+      tempTurnReplacement: t.tempTurnReplacement
+    }))); // Debug
 
     const container = document.getElementById("taskContainer");
-    container.innerHTML = "";
+    container.innerHTML = ""; // Clear UI
 
     const tasksByTitle = {};
+    const duplicateTasks = {}; // Track duplicates
     tasks.forEach(task => {
-      if (!task.title || !task.users || !task.date) return;
+      if (!task.title || !task.users || !task.date) {
+        console.warn(`Skipping invalid task:`, task);
+        return;
+      }
 
+      // Filter by date range
       const [startDateStr, endDateStr] = task.date.split(" to ");
       const startDate = new Date(startDateStr);
       const endDate = new Date(endDateStr || "3000-01-01");
       const currentDate = new Date(selectedDate);
-      if (currentDate < startDate || currentDate > endDate) return;
+      if (currentDate < startDate || currentDate > endDate) {
+        console.log(`Skipping task ${task.title}: ${task.date} does not include ${selectedDate}`); // Debug
+        return;
+      }
 
-      tasksByTitle[task.title] = {
-        ...task,
-        startDate,
-        settings: task.settings || "Rotation",
-        completions: task.completions || {},
-        pendingCompletions: task.pendingCompletions || {},
-        tempTurnReplacement: task.tempTurnReplacement || {}
-      };
+      // Track all tasks with same title
+      if (!duplicateTasks[task.title]) duplicateTasks[task.title] = [];
+      duplicateTasks[task.title].push({
+        date: task.date,
+        users: task.users,
+        tempTurnReplacement: task.tempTurnReplacement?.[selectedDate] || {},
+        startDate
+      });
+
+      const existingTask = tasksByTitle[task.title];
+      const currentDateRange = task.date;
+      const existingDateRange = existingTask?.date;
+      let shouldReplace = false;
+
+      if (!existingTask) {
+        shouldReplace = true;
+      } else {
+        const taskEntry = document.querySelector(`.task-entry[data-title="${task.title}"]`);
+        const replaceDateRange = taskEntry?.dataset.date;
+        if (replaceDateRange && currentDateRange === replaceDateRange) {
+          shouldReplace = true;
+        } else if (new Date(existingTask.startDate) < startDate) {
+          shouldReplace = true;
+        }
+      }
+
+      if (shouldReplace) {
+        tasksByTitle[task.title] = {
+          turns: [],
+          pendingCount: 0,
+          date: task.date,
+          userOrder: task.users || [],
+          settings: task.settings || "Rotation",
+          startDate
+        };
+      } else {
+        console.warn(`Duplicate task title: ${task.title}, date: ${task.date}, keeping date: ${existingTask.date}`); // Debug
+        return;
+      }
+
+      const turns = prepareTaskTurnData(task, selectedDate);
+      tasksByTitle[task.title].pendingCount += turns.filter(t => t.isPending).length;
+      turns.forEach((turn, index) => {
+        tasksByTitle[task.title].turns.push({
+          user: turn.user,
+          repetition: turn.repetition,
+          index,
+          date: task.date,
+          isPending: turn.isPending,
+          isCompleted: turn.isCompleted
+        });
+      });
     });
 
-    Object.keys(tasksByTitle).forEach(title => {
-      const task = tasksByTitle[title];
-      const rotation = calculateTurn(task, selectedDate);   // ✅ Current Turn, Next, Completed
-      const turns = prepareTaskTurnData(task, selectedDate); // ✅ All turns
-      const date = task.date;
+    if (retry && attempt < maxAttempts) {
+      const hasReplacement = Object.values(tasksByTitle).some(task =>
+        task.turns.some(turn => turn.user !== task.userOrder[turn.index % task.userOrder.length])
+      );
+      if (!hasReplacement) {
+        console.warn(`Retry ${attempt}: No tempTurnReplacement found, retrying...`);
+        await new Promise(resolve => setTimeout(resolve, 500));
+        return loadTasks(true, attempt + 1, maxAttempts);
+      }
+    }
 
+    Object.keys(tasksByTitle).sort().forEach(title => {
+      const { turns, pendingCount, date, userOrder } = tasksByTitle[title];
       const div = document.createElement("div");
       div.className = "task-entry";
       div.dataset.title = title;
       div.dataset.date = date;
-
       div.innerHTML = `
-        <h3 class="task-title">${title}</h3>
-        <div class="task-meta">
-          ${
-            task.settings === "Rotation" ? `
-            <p><strong>Current Turn:</strong> ${rotation.currentTurn}</p>
-            <p><strong>Next:</strong> ${rotation.nextUser}</p>
-            <p><strong>Completed:</strong> ${rotation.completedCount}/${rotation.repeatLimit}</p>
-            ` : `
-            <p><strong>Task Type:</strong> Individual</p>
-            `
-          }
-        </div>
+        <h3 class="task-title">${title}${pendingCount > 0 ? `<span class="notification-bubble">${pendingCount}</span>` : ''}</h3>
         <div class="task-details${expandedTasks.has(title) ? ' show' : ''}">
           ${
-            turns.length
-              ? turns.map((turn, index) => `
-                <div class="turn-entry" data-index="${index}" data-user="${turn.user}">
-                  ${
-                    task.settings === "Individual"
-                      ? `<p>${turn.user}: ${turn.completed}/${turn.required}</p>`
-                      : `<p>Turn ${turn.repetition}: ${turn.user} - ${
-                          turn.isCompleted
-                            ? 'Accepted'
-                            : turn.isPending
-                              ? 'Waiting for Review'
-                              : 'Pending'
-                        }</p>`
-                  }
-                  ${
-                    task.settings === "Rotation" && !turn.isCompleted
-                      ? `
-                        <select id="replace-select-${index}">
-                          <option value="">Select User</option>
-                          ${allUsers.map(u => `<option value="${u}">${u}</option>`).join('')}
-                        </select>
-                        <button class="replace-btn" onclick="handleReplace('${title}', '${date}', ${index}, '${turn.user}', event)">Replace</button>
-                      `
-                      : ''
-                  }
-                  ${
-                    turn.isPending && !turn.isCompleted
-                      ? `
-                        <button class="accept-btn" onclick="handleDecision('${title}', '${date}', ${index}, 'accept', '${turn.user}', event)">Accept</button>
-                        <button class="decline-btn" onclick="handleDecision('${title}', '${date}', ${index}, 'decline', '${turn.user}', event)">Decline</button>
-                      `
-                      : ''
-                  }
-                  ${
-                    turn.isCompleted && task.settings === "Rotation"
-                      ? `
-                        <button class="revert-btn" onclick="handleRevert('${title}', '${date}', ${index}, '${turn.user}', event)">Revert</button>
-                      `
-                      : ''
-                  }
-                </div>
-              `).join('')
+            tasksByTitle[title].turns.length && turns[0].repetition !== undefined && turns[0].user !== undefined && tasksByTitle[title].turns
+              ? (tasksByTitle[title].settings === "Rotation"
+                ? turns.map(turn => `
+                  <div class="turn-entry" draggable="true" data-index="${turn.index}" data-user="${turn.user}">
+                    <p>Turn ${turn.index + 1}: ${turn.user} - ${turn.isCompleted ? 'Accepted' : turn.isPending ? 'Waiting for Review' : 'Pending'}</p>
+                    ${turn.isPending && !turn.isCompleted ? `
+                      <button class="accept-btn" onclick="handleDecision('${title}', '${turn.date}', ${turn.index}, 'accept', '${turn.user}', event)">Accept</button>
+                      <button class="decline-btn" onclick="handleDecision('${title}', '${turn.date}', ${turn.index}, 'decline', '${turn.user}', event)">Decline</button>
+                    ` : turn.isCompleted ? `
+                      <button class="revert-btn" onclick="handleRevert('${title}', '${turn.date}', ${turn.index}, '${turn.user}', event)">Revert</button>
+                    ` : `
+                      <select id="replace-select-${turn.index}">
+                        <option value="">Select User</option>
+                        ${allUsers.map(u => `<option value="${u}">${u}</option>`).join('')}
+                      </select>
+                      <button class="replace-btn" onclick="handleReplace('${title}', '${turn.date}', ${turn.index}, '${turn.user}', event)">Replace</button>
+                    `}
+                  </div>
+                `).join('')
+                :
+                userOrder.map(user => {
+                  const userTurns = turns.filter(t => t.user === user);
+                  return `
+                    <h4 style="margin-top: 10px;">${user}</h4>
+                    ${userTurns.map(turn => `
+                      <div class="turn-entry" draggable="false" data-index="${turn.index}" data-user="${turn.user}">
+                        <p>Attempt ${turn.repetition}: ${turn.isCompleted ? 'Accepted' : turn.isPending ? 'Waiting for Review' : 'Pending'}</p>
+                        ${turn.isPending && !turn.isCompleted ? `
+                          <button class="accept-btn" onclick="handleDecision('${title}', '${turn.date}', ${turn.index}, 'accept', '${turn.user}', event)">Accept</button>
+                          <button class="decline-btn" onclick="handleDecision('${title}', '${turn.date}', ${turn.index}, 'decline', '${turn.user}', event)">Decline</button>
+                        ` : turn.isCompleted ? `
+                          <button class="revert-btn" onclick="handleRevert('${title}', '${turn.date}', ${turn.index}, '${turn.user}', event)">Revert</button>
+                        ` : `
+                          <select id="replace-select-${turn.index}">
+                            <option value="">Select User</option>
+                            ${allUsers.map(u => `<option value="${u}">${u}</option>`).join('')}
+                          </select>
+                          <button class="replace-btn" onclick="handleReplace('${title}', '${turn.date}', ${turn.index}, '${turn.user}', event)">Replace</button>
+                        `}
+                      </div>
+                    `).join('')}
+                  `;
+                }).join(''))
               : '<p>No turns assigned.</p>'
           }
         </div>
       `;
-
       container.appendChild(div);
-
-      enableDragAndDrop(div); // ✅ Attach drag-and-drop
 
       div.querySelector(".task-title").addEventListener("click", () => {
         const details = div.querySelector(".task-details");
@@ -878,10 +932,6 @@ async function loadTasks() {
     document.getElementById("taskContainer").innerHTML = "<p>Error loading tasks. Please try again.</p>";
   }
 }
-
-
-
-
 
 
 
@@ -966,6 +1016,7 @@ fetchUsers().then(() => generateScrollableDates());
 
 
 
+<script src="/BeeMazing-Y1/mobile/2-UserProfiles/taskrotations.js"></script>
 
 
 
@@ -974,4 +1025,3 @@ fetchUsers().then(() => generateScrollableDates());
 
 </body>
 </html>
-
