--- a/mobile/4-Market/market.html
+++ b/mobile/4-Market/market.html
@@ -281,17 +281,17 @@
     <a href="/BeeMazing-Y1/mobile/4-Market/addreward.html" class="add-reward-btn" aria-label="Add Reward">+</a>
 
     <div class="footer">
-        <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon" aria-label="Home">
-            <img src="/BeeMazing-Y1/mobile/1-Home/SettingsBtn.png" alt="Home" />
-            <span>User Settings</span>
-        </a>
+      <a href="/BeeMazing-Y1/mobile/2-UserProfiles/userAdmin.html" class="footer-icon" id="homeLink" aria-label="Home">
+        <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
+        <span></span>
+    </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
-            <span>Create Task</span>
+            <span></span>
         </a>
         <a href="/BeeMazing-Y1/mobile/4-Market/market.html" class="footer-icon" aria-label="Market">
             <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
-            <span>Create Reward</span>
+            <span></span>
         </a>
     </div>
 
@@ -309,6 +309,23 @@
 
 
     <script>
+
+
+
+
+// Append admin and user query parameters to Home link
+document.addEventListener("DOMContentLoaded", () => {
+    const homeLink = document.getElementById("homeLink");
+    const urlParams = new URLSearchParams(window.location.search);
+    const admin = urlParams.get("admin");
+    const user = urlParams.get("user");
+    if (admin && user) {
+        homeLink.href = `/BeeMazing-Y1/mobile/2-UserProfiles/userAdmin.html?admin=${encodeURIComponent(admin)}&user=${encodeURIComponent(user)}`;
+    }
+});
+
+
+
         // Dynamically highlight the active footer icon
         document.querySelectorAll('.footer a').forEach(link => {
           const currentPath = window.location.pathname.replace(/\/$/, '');
