--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -386,6 +386,123 @@ body.menu-open {
         font-size: 16px;
     }
 }
+
+
+
+
+
+
+
+/* Profile Icon */
+.profile-icon {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    z-index: 202;
+    transition: transform 0.3s ease;
+}
+
+.profile-icon:hover {
+    transform: scale(1.1);
+}
+
+/* Modal */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--modal-bg);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal.show {
+    display: flex;
+    animation: fadeIn 0.3s ease-out;
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; transform: scale(0.9); }
+    100% { opacity: 1; transform: scale(1); }
+}
+
+.modal-content {
+    background: #2A2B32;
+    padding: 25px;
+    border-radius: 15px;
+    width: 85%;
+    max-width: 400px;
+    text-align: center;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.6);
+    border: 2px solid var(--border-dark);
+    color: var(--text-color);
+}
+
+.modal-content h3 {
+    color: var(--text-color);
+    margin-bottom: 15px;
+    font-weight: 600;
+}
+
+.modal-content select {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    background: #333;
+    color: var(--text-color);
+    border: 2px solid var(--border-dark);
+    border-radius: 8px;
+    font-size: 16px;
+}
+
+.modal-content button {
+    padding: 12px 25px;
+    background: var(--primary-color);
+    color: var(--secondary-color);
+    border: none;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.modal-content button:hover {
+    background: #FFB300;
+    transform: translateY(-2px);
+}
+
+@media (max-width: 600px) {
+    .profile-icon {
+        width: 35px;
+        height: 35px;
+    }
+
+    .modal-content {
+        width: 90%;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </style>
 
 
@@ -410,6 +527,7 @@ body.menu-open {
         <div id="overlay" class="overlay"></div>
         <div class="date-header">
             <button id="menuToggle" class="menu-btn" aria-label="Toggle Menu">☰</button>
+            <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" class="profile-icon" id="profileIcon" alt="Select User" />
             <div class="month-nav">
                 <button id="prevMonth"><</button>
                 <span id="monthLabel">Month</span>
@@ -425,13 +543,25 @@ body.menu-open {
   <div id="taskContainer">Loading tasks...</div>
 
 
+  <div class="modal" id="userSelectModal">
+    <div class="modal-content">
+        <h3>Select User</h3>
+        <select id="userSelect">
+            <option value="">Select a user</option>
+            <!-- Users will be populated dynamically -->
+        </select>
+        <button id="confirmUserBtn">Confirm</button>
+    </div>
+</div>
+
+
 
 
 
   <div class="footer">
     <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
         <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-        <span></span>
+        <span>H</span>
     </a>
     <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
       <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
@@ -448,7 +578,59 @@ body.menu-open {
   <script>
 
 
+// Fetch users from server (adapted from home.js)
+async function fetchUsersFromServer(email) {
+    try {
+        const res = await fetch(`https://beemazing.onrender.com/get-users?adminEmail=${encodeURIComponent(email)}`);
+        const data = await res.json();
+        if (data.success) {
+            const allUserData = JSON.parse(localStorage.getItem("userData")) || {};
+            if (!allUserData[email]) {
+                allUserData[email] = { users: [], permissions: {} };
+            }
+            allUserData[email].users = data.users || [];
+            allUserData[email].permissions = data.permissions || {};
+            localStorage.setItem("userData", JSON.stringify(allUserData));
+            return data.users || [];
+        }
+        return [];
+    } catch (err) {
+        console.error("Failed to fetch users:", err);
+        return [];
+    }
+}
 
+// User selection modal logic
+const profileIcon = document.getElementById("profileIcon");
+const userSelectModal = document.getElementById("userSelectModal");
+const userSelect = document.getElementById("userSelect");
+const confirmUserBtn = document.getElementById("confirmUserBtn");
+
+profileIcon.addEventListener("click", async () => {
+    const users = await fetchUsersFromServer(adminEmail);
+    userSelect.innerHTML = '<option value="">Select a user</option>';
+    users.forEach(user => {
+        const option = document.createElement("option");
+        option.value = user;
+        option.textContent = user;
+        userSelect.appendChild(option);
+    });
+    userSelectModal.classList.add("show");
+});
+
+userSelectModal.addEventListener("click", (e) => {
+    if (e.target === userSelectModal) {
+        userSelectModal.classList.remove("show");
+    }
+});
+
+confirmUserBtn.addEventListener("click", () => {
+    const selectedUser = userSelect.value;
+    if (selectedUser) {
+        window.location.href = `/BeeMazing-Y1/mobile/2-UserProfiles/users.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(selectedUser)}`;
+    }
+    userSelectModal.classList.remove("show");
+});
 
 
 // Dynamically set footer button links and active state
