--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -412,8 +412,18 @@ body.menu-open {
     transform: scale(1.1);
 }
 
-/* Modal */
-.modal {
+
+
+
+
+
+
+
+
+
+
+/* Bottom Sheet Modal when selecting users */
+.bottom-sheet {
     display: none;
     position: fixed;
     top: 0;
@@ -421,75 +431,106 @@ body.menu-open {
     width: 100%;
     height: 100%;
     background: var(--modal-bg);
-    justify-content: center;
-    align-items: center;
     z-index: 1000;
 }
-
-.modal.show {
-    display: flex;
-    animation: fadeIn 0.3s ease-out;
+.bottom-sheet.show {
+    display: block;
 }
-
-@keyframes fadeIn {
-    0% { opacity: 0; transform: scale(0.9); }
-    100% { opacity: 1; transform: scale(1); }
-}
-
-.modal-content {
-    background: #2A2B32;
-    padding: 25px;
-    border-radius: 15px;
-    width: 85%;
-    max-width: 400px;
-    text-align: center;
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.6);
-    border: 2px solid var(--border-dark);
-    color: var(--text-color);
-}
-
-.modal-content h3 {
-    color: var(--text-color);
-    margin-bottom: 15px;
-    font-weight: 600;
-}
-
-.modal-content select {
+.bottom-sheet-content {
+    position: fixed;
+    bottom: 0;
+    left: 0;
     width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    background: #333;
-    color: var(--text-color);
-    border: 2px solid var(--border-dark);
-    border-radius: 8px;
-    font-size: 16px;
+    max-height: 70vh;
+    background: #2A2B32;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.5);
+    transform: translateY(100%);
+    transition: transform 0.3s ease-in-out;
 }
-
-.modal-content button {
-    padding: 12px 25px;
-    background: var(--primary-color);
-    color: var(--secondary-color);
-    border: none;
-    border-radius: 8px;
-    font-size: 16px;
+.bottom-sheet.show .bottom-sheet-content {
+    transform: translateY(0);
+}
+.bottom-sheet-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 20px;
+    border-bottom: 1px solid var(--border-dark);
+}
+.bottom-sheet-header h3 {
+    margin: 0;
+    font-size: 18px;
     font-weight: 600;
+    color: var(--text-color);
+}
+.bottom-sheet-header .close-btn {
+    background: none;
+    border: none;
+    color: var(--text-color);
+    font-size: 24px;
     cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.2s ease;
+    padding: 5px;
+}
+.bottom-sheet-header .close-btn:hover {
+    color: var(--primary-color);
+}
+.user-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    max-height: calc(70vh - 60px);
+    overflow-y: auto;
+}
+.user-list li {
+    padding: 15px 20px;
+    border-bottom: 1px solid var(--border-dark);
+    font-size: 16px;
+    color: var(--text-color);
+    cursor: pointer;
+    transition: background 0.2s ease;
+}
+.user-list li:hover {
+    background: #333540;
+}
+.user-list li:last-child {
+    border-bottom: none;
+}
+.user-list::-webkit-scrollbar {
+    width: 8px;
+}
+.user-list::-webkit-scrollbar-track {
+    background: #2A2B32;
+}
+.user-list::-webkit-scrollbar-thumb {
+    background: #444754;
+    border-radius: 4px;
+}
+.user-list::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
-.modal-content button:hover {
-    background: #FFB300;
-    transform: translateY(-2px);
-}
+
+
+/* Bottom Sheet Modal when selecting users */
+
+
 
 @media (max-width: 600px) {
     .profile-icon {
         width: 35px;
         height: 35px;
     }
-
-    .modal-content {
-        width: 90%;
+    .bottom-sheet-content {
+        max-height: 80vh;
+    }
+    .bottom-sheet-header h3 {
+        font-size: 16px;
+    }
+    .user-list li {
+        font-size: 14px;
+        padding: 12px 15px;
     }
 }
 
@@ -545,14 +586,13 @@ body.menu-open {
   <div id="taskContainer">Loading tasks...</div>
 
 
-  <div class="modal" id="userSelectModal">
-    <div class="modal-content">
-        <h3>Select User</h3>
-        <select id="userSelect">
-            <option value="">Select a user</option>
-            <!-- Users will be populated dynamically -->
-        </select>
-        <button id="confirmUserBtn">Confirm</button>
+  <div class="bottom-sheet" id="userSelectModal">
+    <div class="bottom-sheet-content">
+        <div class="bottom-sheet-header">
+            <h3>Select User</h3>
+            <button id="closeModalBtn" class="close-btn" aria-label="Close">×</button>
+        </div>
+        <ul id="userList" class="user-list"></ul>
     </div>
 </div>
 
@@ -627,39 +667,36 @@ async function fetchUsersFromServer(email) {
 // User selection modal logic
 const profileIcon = document.getElementById("profileIcon");
 const userSelectModal = document.getElementById("userSelectModal");
-const userSelect = document.getElementById("userSelect");
-const confirmUserBtn = document.getElementById("confirmUserBtn");
-
+const userList = document.getElementById("userList");
+const closeModalBtn = document.getElementById("closeModalBtn");
 profileIcon.addEventListener("click", async () => {
     if (!adminEmail) {
         alert("Admin email not found. Please log in again.");
         return;
     }
     const users = await fetchUsersFromServer(adminEmail);
-    userSelect.innerHTML = '<option value="">Select a user</option>';
+    userList.innerHTML = '';
     if (users.length === 0) {
         alert("No users found for this admin.");
+        userList.innerHTML = '<li style="padding: 15px 20px; color: #D32F2F;">No users available</li>';
+    } else {
+        users.forEach(user => {
+            const li = document.createElement("li");
+            li.textContent = user;
+            li.addEventListener("click", () => {
+                window.location.href = `/BeeMazing-Y1/mobile/2-UserProfiles/users.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(user)}`;
+            });
+            userList.appendChild(li);
+        });
     }
-    users.forEach(user => {
-        const option = document.createElement("option");
-        option.value = user;
-        option.textContent = user;
-        userSelect.appendChild(option);
-    });
     userSelectModal.classList.add("show");
 });
-
 userSelectModal.addEventListener("click", (e) => {
     if (e.target === userSelectModal) {
         userSelectModal.classList.remove("show");
     }
 });
-
-confirmUserBtn.addEventListener("click", () => {
-    const selectedUser = userSelect.value;
-    if (selectedUser) {
-        window.location.href = `/BeeMazing-Y1/mobile/2-UserProfiles/users.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(selectedUser)}`;
-    }
+closeModalBtn.addEventListener("click", () => {
     userSelectModal.classList.remove("show");
 });
 
